# musicbot

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
src/: main.rs
src/audio/: join.rs
src/commands/: change_channel.rs  clear_queue.rs  disconnect.rs  mod.rs  play.rs  play_local.rs  queue.rs  shuffle.rs  skip.rs
src/utils/: audio.rs  cli.rs  event_handler.rs  local_files.rs  localization.rs  mod.rs  response.rs
