[package]
name = "musicbot"
version = "0.9.0"
edition = "2024"

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
songbird = { version = "0.5", features = ["builtin-queue"] }
symphonia = { version = "0.5", features = ["all"] }
reqwest = "0.12.22"
serde_json = "1.0.141"
serde = "1.0.219"
rand = "0.9.2"
