[package]
name = "musicbot"
version = "0.9.0"
edition = "2024"
description = "A Discord music bot that plays music using yt-dlp and from local files."

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
songbird = { version = "0.5", features = ["builtin-queue"] }
symphonia = { version = "0.5", features = ["all"] }
reqwest = "0.12.22"
serde_json = "1.0.141"
serde = "1.0.219"
rand = "0.9.2"
lofty = "0.22.4"
clap = { version = "4.5.53", features = ["derive"] }
