[package]
name = "musicbot"
version = "0.9.0"
edition = "2024"
description = "A Discord music bot that plays music using yt-dlp and from local files."

[dependencies]
serenity = "0.12.5"
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread"] }
songbird = { version = "0.6", features = ["builtin-queue"] }
symphonia = { version = "0.5.5", features = ["all"] }
reqwest = "0.12"
serde_json = "1.0.149"
serde = "1.0.228"
rand = "0.10.0"
lofty = "0.23.3"
clap = { version = "4.6.0", features = ["derive"] }
